--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -3,10 +3,11 @@
   {{ showMessage }}
 </div>
 <form [formGroup]="formGroupContact" (ngSubmit)="isEditing ? update() : save()">
-  <input formControlName="name" placeholder="Nome" class="form-control mb-2">
-  <input formControlName="number" placeholder="Telefone" class="form-control mb-2">
+  <input formControlName="name" placeholder="Nome*" class="form-control mb-2">
+  <input formControlName="telephone" placeholder="Telefone*" class="form-control mb-2">
   <input formControlName="email" placeholder="Email" class="form-control mb-2">
   <input formControlName="address" placeholder="Endereço" class="form-control mb-2">
+  <input formControlName="birthdate" type="date" placeholder="Data Nasc." class="form-control mb-2" />
   <select formControlName="category" class="form-control mb-2" placeholder="Categoria">
     <option value="Family">Família</option>
     <option value="Friends">Amigos</option>
@@ -19,7 +20,6 @@
     <input type="checkbox" class="form-check-input" formControlName="favorite">
     <label class="form-check-label">Favorito</label>
   </div>
-
   <button type="submit" class="btn btn-primary">{{ isEditing ? 'Atualizar' : 'Salvar' }}</button>
   <button type="button" class="btn btn-secondary ms-2" (click)="clear()">Limpar</button>
 </form>
