--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">PhoneBook</a>
+      <a class="navbar-brand">PhoneBook</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -8,11 +8,11 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="contacts">Cadastrar</a>
+            <a class="nav-link" aria-current="page" routerLink="contacts">Cadastrar Contato</a>
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="list">Lista</a>
+            <a class="nav-link" aria-current="page" routerLink="list">Lista de Contatos</a>
           </li>
         </ul>
       </div>
